Stream API file selectors #18
